--- a/Rx.IB2.Server/Rx.IB2.Server.csproj
+++ b/Rx.IB2.Server/Rx.IB2.Server.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
       <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
       <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+      <PackageReference Include="Serilog.Sinks.File.Archive" Version="1.0.3" />
     </ItemGroup>
 
 </Project>
