Updated default log directory

--- a/Rx.IB2.Server/appsettings.json
+++ b/Rx.IB2.Server/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     },
     "Additional": {
-      "FileDirectory": "C:\\Users\\RaenonX\\Downloads\\KL",
+      "FileDirectory": "C:\\Users\\RaenonX\\Downloads\\Rx.Trade"
     }
   },
   "AllowedHosts": "*",
