Updated log directory

--- a/Rx.IB2.Server/appsettings.json
+++ b/Rx.IB2.Server/appsettings.json
@@ -5,9 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     },
     "Additional": {
-      "FileDirectory": "C:\\Users\\RaenonX\\Downloads\\Rx.Trade"
+      "FileDirectory": "C:\\Users\\RaenonX\\Documents\\Projects\\Trading\\@Production\\@Logs"
     }
   },
+  "Urls": "http://localhost:5075",
   "AllowedHosts": "*",
   "TWS": {
     "Port": 7496,
