--- a/Rx.IB2.Server/appsettings.Development.json
+++ b/Rx.IB2.Server/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Additional": {
+      "FileDirectory": "C:\\Users\\RaenonX\\Documents\\Projects\\Trading\\@Development\\Logs"
     }
   }
 }
